<resources>
    <string name="app_name">BinarSuit</string>
    <string name="paper">Kertas</string>
    <string name="rock">Batu</string>
    <string name="scissor">Gunting</string>
    <string name="vs">VS</string>
    <string name="player">Player</string>
    <string name="title_activity_third">ThirdActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="view_pager">View Pager</string>
    <string name="close">Tutup</string>
</resources>