<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".game.PvcActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pvp_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/opensans_bolditalic"
        android:gravity="center"
        android:text="@string/paper"
        android:textColor="#FF9800"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pvp_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bolditalic"
        android:gravity="center"
        android:text="@string/scissor"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pvp_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pvp_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bolditalic"
        android:gravity="center"
        android:text="@string/rock"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pvp_2" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pvp_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bolditalic"
        android:text="@string/vs"
        android:textColor="#FF0000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linear_pvp_player_2"
        app:layout_constraintStart_toEndOf="@+id/linear_pvp_player"
        app:layout_constraintTop_toBottomOf="@+id/tv_pvp_3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_pvp_restart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_pvp_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_pvp_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="124dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pvp_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/player"
            android:textColor="#00BCD4"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pvp_player_rock"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/rock"
            app:srcCompat="@drawable/batu" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pvp_player_paper"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/paper"
            app:srcCompat="@drawable/kertas" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pvp_player_scissor"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/scissor"
            app:srcCompat="@drawable/gunting" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_pvp_player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pvp_player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="Pemain 2"
            android:textColor="#00BCD4"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pvp_player_2_rock"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="batu"
            app:srcCompat="@drawable/batu" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pvp_player_2_paper"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="kertas"
            app:srcCompat="@drawable/kertas" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pvp_player_2_scissor"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="gunting"
            app:srcCompat="@drawable/gunting" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
